<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/GameOverOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/gameover"
        android:textColor="@color/textColour"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/ScoreOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameOverOut"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/score_0_10"
        android:textColor="@color/textColour"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip">

        <Button
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:onClick="restartGame"
            android:text="@string/play_again" />

        <Button
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:onClick="quitGame"
            android:text="@string/quit" />

    </LinearLayout>
</RelativeLayout>